Version 4.9.11 (TBD)
    Fixed the `selection.setContent()` API not running parser filters #TINY-4002
    Fixed content in an iframe element parsing as dom elements instead of text content #TINY-5943
Version 4.9.10 (2020-04-23)
    Fixed an issue where the editor selection could end up inside a short ended element (eg br) #TINY-3999
    Fixed a security issue related to CDATA sanitization during parsing #TINY-4669
    Fixed `media` embed content not processing safely in some cases #TINY-4857
Version 4.9.9 (2020-03-25)
    Fixed the table selection not functioning correctly in Microsoft Edge 44 or higher #TINY-3862
    Fixed the table resize handles not functioning correctly in Microsoft Edge 44 or higher #TINY-4160
    Fixed the `forced_root_block_attrs` setting not applying attributes to new blocks consistently #TINY-4564
    Fixed the editor failing to initialize if a script tag was used inside an SVG #TINY-4087
Version 4.9.8 (2020-01-28)
    Fixed the `mobile` theme failing to load due to a bundling issue #TINY-4613
    Fixed security issue related to parsing HTML comments and CDATA #TINY-4544
Version 4.9.7 (2019-12-19)
    Fixed the `visualchars` plugin converting HTML-like text to DOM elements in certain cases #TINY-4507
    Fixed an issue with the `paste` plugin not sanitizing content in some cases #TINY-4510
    Fixed HTML comments incorrectly being parsed in certain cases #TINY-4511
Version 4.9.6 (2019-09-02)
    Fixed image browse button sometimes displaying the browse window twice #TINY-3959
Version 4.9.5 (2019-07-02)
    Changed annotations navigation to work the same as inline boundaries #TINY-3396
    Fixed the print plugin printing from the wrong window in IE11 #TINY-3762
    Fixed an exception being thrown when a file or number input has focus during initialization. Patch contributed by t00 #GH-2194
    Fixed positioning of the styleselect menu in iOS while using the mobile theme #TINY-3505