@@ -1,6 +1,7 @@
 Version 4.9.11 (TBD)
     Fixed the `selection.setContent()` API not running parser filters #TINY-4002
-    Fixed content in an iframe element parsing as dom elements instead of text content #TINY-5943
+    Fixed content in an iframe element parsing as DOM elements instead of text content #TINY-5943
+    Fixed up and down keyboard navigation not working for inline `contenteditable="false"` elements #TINY-6226
 Version 4.9.10 (2020-04-23)
     Fixed an issue where the editor selection could end up inside a short ended element (eg br) #TINY-3999
     Fixed a security issue related to CDATA sanitization during parsing #TINY-4669
